[JBWS-4083] set required new security-manager flag -secmgr