@@ -42,7 +42,7 @@ import org.junit.runner.RunWith;
  * @author Heiko.Braun@jboss.com
  */
 @RunWith(Arquillian.class)
-public class WSConsumeScriptTestCase extends ScriptTestCase
+public class WSConsumeScriptTestCase extends org.jboss.test.ws.jaxws.smoke.tools.ScriptTestCase
 {
    private String WSDL_LOCATION = "jaxws" + FS + "smoke" + FS + "tools" + FS + "wsdl" + FS + "TestServiceCatalog.wsdl";
 
@@ -54,8 +54,17 @@ public class WSConsumeScriptTestCase extends ScriptTestCase
       String absWsdlLoc = getResourceFile(WSDL_LOCATION).getAbsolutePath();
       String absOutput = new File(TEST_DIR, "wsconsume" + FS + "java").getAbsolutePath();
       String command = JBOSS_HOME + FS + "bin" + FS + "wsconsume" + EXT + " -v -k -o " + absOutput + " " + absWsdlLoc;
+
+      // wildfly9 security manager flag changed from -Djava.security.manager to -secmgr.
+      // Can't pass -secmgr arg through arquillian because it breaks arquillian's
+      // config of our tests.
+      // the -secmgr flag MUST be provided as an input arg to jboss-modules so it must
+      // come after the jboss-modules.jar ref.
+      String additionalJVMArgs = System.getProperty("additionalJvmArgs", "");
+      String securityManagerDesignator = additionalJVMArgs.replace("-Djava.security.manager", "-secmgr");
+
       Map<String, String> env = new HashMap<>();
-      env.put("JAVA_OPTS", System.getProperty("additionalJvmArgs"));
+      env.put("JAVA_OPTS", securityManagerDesignator);
       executeCommand(command, null, "wsconsume", env);
       File javaSource = new File(TEST_DIR, "wsconsume" + FS + "java" + FS + "org" + FS + "openuri" + FS + "_2004" + FS + "_04" + FS + "helloworld" + FS + "EndpointInterface.java");
       assertTrue("Service endpoint interface not generated", javaSource.exists());
